[gd_scene load_steps=16 format=3 uid="uid://b5luqplnf2rgy"]

[ext_resource type="Script" uid="uid://bqhk76st38ie2" path="res://scripts/chest.gd" id="1_sy5e1"]
[ext_resource type="Texture2D" uid="uid://r13i7mxh2cac" path="res://Abyss of oblivion assets workshop/pixil-frame-0aaaa.png" id="2_gqd3d"]
[ext_resource type="AudioStream" uid="uid://8gcc4u75r4gm" path="res://assets/sounds/common/gambling_riser.mp3" id="3_yue2o"]
[ext_resource type="AudioStream" uid="uid://cocrxeqhl8lmc" path="res://assets/sounds/common/gambling_ending.mp3" id="4_yhylo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yue2o"]
atlas = ExtResource("2_gqd3d")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhylo"]
atlas = ExtResource("2_gqd3d")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w02o5"]
atlas = ExtResource("2_gqd3d")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilhio"]
atlas = ExtResource("2_gqd3d")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg5gm"]
atlas = ExtResource("2_gqd3d")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8me8i"]
atlas = ExtResource("2_gqd3d")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfymr"]
atlas = ExtResource("2_gqd3d")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_udamv"]
atlas = ExtResource("2_gqd3d")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_up8i7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yue2o")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhylo")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_w02o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilhio")
}],
"loop": false,
"name": &"open",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg5gm")
}],
"loop": true,
"name": &"opened",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8me8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfymr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udamv")
}],
"loop": true,
"name": &"opening",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnvde"]
size = Vector2(10, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_sy5e1"]
radius = 25.0799

[node name="CHEST" type="Node2D"]
script = ExtResource("1_sy5e1")

[node name="chest_body" type="Area2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="chest_body"]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_up8i7")
animation = &"opened"
frame_progress = 0.395922

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest_body"]
shape = SubResource("RectangleShape2D_nnvde")

[node name="opening_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_sy5e1")

[node name="opening" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yue2o")
volume_db = -10.0

[node name="opened" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yhylo")

[connection signal="animation_finished" from="chest_body/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="opening_timer" to="." method="_on_opening_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
